# Sahasranshu

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  run_one.py
.github/workflows/: ci.yml  release.yml
.precommit-venv/: pyvenv.cfg
data/: README.md
data/US/FED/2024/Dec/manifests/: 2024-12-18_FOMC_Statement.json
docs/: Blogpost.docx  Blogpost.md  architecture.md  datasets.md  devpost_submission.md  evaluation.md  how_to_run.md  limitations.md  ontology.md  pitch_deck.md  prompts.md  system_architecture.md
examples/fed_case_study/: manifest.json
examples/rbi_case_study/: manifest.json
scripts/: build_diagram.sh  convert_llm_records.py  generate_blog_docx.py  list_models.py  release_check.sh  run_case_study.sh  run_demo.sh
src/sahasranshu/: __init__.py  cli.py
src/sahasranshu/config/: logging.py  settings.py
src/sahasranshu/core/: errors.py  hashing.py  io.py  manifest.py  types.py
src/sahasranshu/engines/: assemble.py  delta.py  hypothesize.py  normalize.py
src/sahasranshu/evaluation/: golden.py  metrics.py  runners.py
src/sahasranshu/ingestion/: cleaning.py  pdf.py
src/sahasranshu/llm/: caching.py  gemini_client.py  json_guard.py  prompts.py
src/sahasranshu/reporting/: memo_renderer.py
src/sahasranshu/schemas/: delta.py  hypothesis.py  memo.py  provenance.py  stance.py
src/sahasranshu/tools/: retrieve.py
tests/fixtures/: gemini_raw_responses.json  golden_analysis.json  sample_pages.json
tests/integration/: test_llm_integration.py  test_pipeline_fed.py  test_pipeline_golden.py  test_pipeline_rbi.py
tests/unit/: test_delta_deterministic.py  test_gemini_client_recording.py  test_gemini_timeout_retry.py  test_ingestion.py  test_json_guard.py  test_json_guard_fixtures.py  test_schemas.py
web_view/: analysis.json  app.js  index.html  memo.md  mock_analysis.json  style.css
(+5 files in other folders)
