[project]
name = "sahasranshu"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sahasranshu = "sahasranshu.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "black",
  "isort",
  "mypy",
  "codecov",
  "pre-commit",
  # Pin the SDK to a compatible minor range to avoid breaking changes
  "google-generativeai>=0.8.0,<1.0.0"
]

[tool.pytest.ini_options]
markers = [
  "integration: mark tests as integration tests",
  "llm: mark tests that call external LLM providers (requires GEMINI_API_KEY)"
]
